# axiom

./: CMakeLists.txt  CMakePresets.json
editor/: CMakeLists.txt
editor/src/: main.c
engine/: CMakeLists.txt
engine/cmake/: flecs.cmake
engine/include/axiom/: engine.h
engine/include/axiom/core/: error.h
engine/include/axiom/windowing/: window.h
engine/src/: engine.c
engine/src/core/: error.c
engine/src/windowing/: window.c
modules/: CMakeLists.txt
modules/window/: CMakeLists.txt
modules/window/glfw/: CMakeLists.txt
modules/window/glfw/cmake/: glfw.cmake
modules/window/glfw/include/axiom/windowing/: axiom_glfw_window.h
modules/window/glfw/src/: axiom_glfw_window.c
